# quantitative_analysis

./: .gitignore  README.md  package-lock.json  start-backend.sh  start.sh  stop.sh
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_minimax_agent.py  trend_predictions.db
backend/api/: auth.py  captcha.py  stock.py  trend_prediction.py  watchlist.py
backend/services/: akshare_service.py  auth_service.py  captcha_service.py  db_migration.py  minimax_mcp_search_tool.py  stock_trend_agent.py  task_queue.py  tavily_search_tool.py  trend_prediction_service.py  user_service.py  watchlist_service.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnalysisProgressBar.tsx  AuthModal.tsx  IndicatorPanel.tsx  PETrendSparkline.tsx  PresetStockList.tsx  Providers.tsx  StockChart.tsx  StockMarketTabs.tsx  TrendAnalysisPanel.tsx  WatchList.tsx
frontend/src/config/: presetStocks.ts
frontend/src/contexts/: AnalysisTaskContext.tsx
frontend/src/services/: auth.tsx  stock.ts  trendPrediction.ts  watchlist.ts
openspec/changes/extend-trend-analysis-display/: tasks.md
openspec/changes/extend-trend-analysis-explain/: proposal.md  tasks.md
openspec/changes/stock-trend-analysis-by-news/: design.md  proposal.md
openspec/specs/analysis-trigger-rate-limit/: spec.md
openspec/specs/batch-stock-valuation-query/: spec.md
openspec/specs/daily-analysis-cache/: spec.md
openspec/specs/kline-chart/: spec.md
openspec/specs/minimax-mcp-search/: spec.md
(+160 files in other folders)
